--- a/dwarf-forms.html
+++ b/dwarf-forms.html
@@ -190,70 +190,31 @@
     <!-- First fold -->
     <section class="mt-n11 pt-12 pb-8 pt-md-14 pb-md-11 border-bottom">
       <div class="container">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center mb-10">
           <div class="col-12 col-lg-10 text-center">
 
-            <img alt="Dwarf Forms Logo" width="192" class="img-fluid mb-6" src="assets/dwarf forms/Dwarf Forms_Logo_Center.svg">
-
             <!-- Headin -->
-            <h1 class="display-3 fw-bold aos-init aos-animate" data-aos="fade-up" data-aos-delay="50">
+            <h1 class="display-3 fw-bold aos-init aos-animate mb-4" data-aos="fade-up" data-aos-delay="50">
               <span class="text-primary"> Convert 35% more users</span> with a shorter form that gives you more
             </h1>
 
-            <!-- Text -->
-            <p class="lead text-muted mb-6 mx-auto aos-init aos-animate" data-aos="fade-up" data-aos-delay="100" style="max-width: 500px;">
-              Nubela Dwarf Forms lets you have short web forms while getting
-            </p>
+            <img alt="Dwarf Forms Logo" class="img-fluid mb-6" src="Illustration_landscape_placement.png">
 
             <div class="row justify-content-center">
-              <div class="col-12 col-md-6 justify-content-center">
-                <!-- Form -->
-                <form class="pb-lg-10">
-                  <div class="form-group">
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="work@email.com">
-                  </div>
-
-                <!-- Buttons -->
-                <button type="button" class="btn btn-primary btn-md btn-block text-center">
-                  Get early access
-                </button>
-                </form>
+              <div class="col-12 col-md-6">
+                <a class="btn btn-block btn-primary" href="#">View Demo</a>
               </div>
+
+              <div class="col-12 col-md-6">
+                <a class="btn btn-block btn-primary-soft" href="#">Get Early Access</a>
+              </div>              
             </div>
 
           </div>
         </div> <!-- / .row -->
-        <div class="row">
-          <div class="col-12 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
 
-            <!-- Media -->
-            <div class="position-relative pt-7 pb-7 ps-7 mb-7 mb-md-9 rounded-4 shadow-multicolor overflow-hidden">
-
-              <!-- Background -->
-              <div class="position-absolute top-0 end-0 bottom-0 start-0 bg-gradient-multicolor"></div>
-
-              <!-- Video -->
-              <div class="ratio">
-                <video class="rounded-lg shadow-light-lg bg-light" src="assets/dwarf forms/Dwarf-Forms-demo.webm" autoplay="" loop="" muted="">
-                  Sorry, your browser doesn't support embedded videos,
-                  but don't worry, you can <a href="assets/dwarf forms/Dwarf-Forms-demo.webm">download it</a>
-                  and watch it with your favorite video player!
-                </video>
-              </div>
-
-            </div>
-
-          </div>
-        </div> <!-- / .row -->
         <div class="row align-items-center justify-content-center">
-          <div class="col-12">
 
-            <!-- Heading -->
-            <h6 class="text-uppercase text-center text-info mb-6">
-              Enable the future of tech
-            </h6>
-
-          </div>
           <div class="col-6 col-sm-4 col-md-2 mb-4 mb-md-0">
 
             <!-- Brand -->
