--- a/dwarf-forms.html
+++ b/dwarf-forms.html
@@ -194,11 +194,11 @@
           <div class="col-12 col-lg-10 text-center">
 
             <!-- Headin -->
-            <h1 class="display-3 fw-bold aos-init aos-animate mb-4" data-aos="fade-up" data-aos-delay="50">
+            <h1 class="display-3 fw-bold aos-init aos-animate mb-6" data-aos="fade-up" data-aos-delay="50">
               <span class="text-primary"> Convert 35% more users</span> with a shorter form that gives you more
             </h1>
 
-            <img alt="Dwarf Forms Logo" class="img-fluid mb-6" src="Illustration_landscape_placement.png">
+            <img alt="Dwarf Forms illustration" class="img-fluid mb-6" src="assets/dwarf forms/Dwarf Forms illustration_first fold 1.svg">
 
             <div class="row justify-content-center">
               <div class="col-12 col-md-6">
