--- a/proxycurl-dashboard-invoices.html
+++ b/proxycurl-dashboard-invoices.html
@@ -85,6 +85,11 @@
                       </a>
                     </li>
                     <li class="list-item">
+                      <a class="list-link text-reset" href="proxycurl-dashboar-pricing-quota.html">
+                        Pricing and Quota
+                      </a>
+                    </li>
+                    <li class="list-item">
                       <a class="list-link text-reset" href="#">
                         Documentation
                       </a>
