--- a/proxycurl-dashboard-pricing-quota.html
+++ b/proxycurl-dashboard-pricing-quota.html
@@ -173,101 +173,111 @@
 
                     <!-- Table -->
                     <div class="row">
-                      <div class="col-12" style="overflow: auto;">
-                        <table class="table table-striped">
+                      <div class="col-12">
+                        <table class="table table-responsive table-borderless table-hover table-striped">
+                          
+                          <!-- Buttons -->
                           <thead>
-                            <tr class="text-primary lead">
+                            <tr class="mb-1">
+                              <th scope="col"></th>
+                              <th scope="col">
+                                <fieldset disabled>
+                                  <a style="min-width: 112px;" class="btn btn-xs btn-block btn-secondary-soft">
+                                    Current Plan
+                                  </a>
+                                </fieldset>
+                              </th>
+                              <th scope="col">
+                                <a href="#!" style="min-width: 112px;" class="btn btn-xs btn-block btn-primary">
+                                  Pick Lite Plan
+                                </a>
+                              </th>
+                              <th scope="col">
+                                <a href="#!" style="min-width:112px;" class="btn btn-xs btn-block btn-primary">
+                                  Pick Pro Plan
+                                </a>
+                              </th>
+                            </tr>
+                          </thead>
+                          
+                          <thead>
+                            <tr class="text-center  text-primary lead">
                               <th scope="col">API</th>
-                              <th scope="col">Free</th>
+                              <th scope="col" class="text-black">Free</th>
                               <th scope="col">Lite</th>
                               <th scope="col">Pro</th>
                             </tr>
                           </thead>
+
                           <tbody>
                             <tr>
                               <th scope="row">Person Profile Endpoint</th>
-                              <td>1 credit</td>
+                              <td class="table-active">1 credit</td>
                               <td>1 credit</td>
                               <td>1 credit</td>
                             </tr>
                             <tr>
                               <th scope="row">Company Profile Endpoint</th>
-                              <td>1 credit</td>
+                              <td class="table-active">1 credit</td>
                               <td>1 credit</td>
                               <td>1 credit</td>
                             </tr>
                             <tr>
                               <th scope="row">Job Listings Endpoint</th>
-                              <td>2 credits</td>
+                              <td class="table-active">2 credits</td>
                               <td>1 credit (up to 10000 calls / mo)</td>
                               <td>1 credit</td>
                             </tr>
                             <tr>
                               <th scope="row">Job Profile Endpoint</th>
-                              <td>2 credits</td>
+                              <td class="table-active">2 credits</td>
                               <td>1 credit (up to 10000 calls / mo)</td>
                               <td>1 credit</td>
                             </tr>
                             <tr>
                               <th scope="row">General Resolution Endpoint</th>
-                              <td>3 credits</td>
+                              <td class="table-active">3 credits</td>
                               <td>2 credits (up to 10000 calls / mo)</td>
                               <td>1 credit</td>
                             </tr>
                             <tr>
                               <th scope="row">Company General Resolution Endpoint</th>
-                              <td>3 credits</td>
+                              <td class="table-active">3 credits</td>
                               <td>2 credits (up to 10000 calls / mo)</td>
                               <td>1 credit</td>
                             </tr>
                             <tr>
                               <th scope="row">Employee Listing Count Endpoint</th>
-                              <td>10 credits</td>
+                              <td class="table-active">10 credits</td>
                               <td>1 credit (up to 10000 calls / mo)</td>
                               <td>1 credit / employee</td>
                             </tr>
                             <tr>
                               <th scope="row">Employee Listing Endpoint</th>
-                              <td>10 credits / employee</td>
+                              <td class="table-active">10 credits / employee</td>
                               <td>3 credits / employee (up to 10000 calls / mo)</td>
                               <td>1 credit</td>
                             </tr>
                             <tr>
                               <th scope="row">Work Email Lookup Endpoint</th>
-                              <td>10 credits</td>
+                              <td class="table-active">10 credits</td>
                               <td>3 credits (up to 10000 calls / mo)</td>
                               <td>1 credit</td>
                             </tr>
                             <tr>
                               <th scope="row">Personal Email Lookup Endpoint</th>
-                              <td>10 credits</td>
+                              <td class="table-active">10 credits</td>
                               <td>3 credits (up to 10000 calls / mo)</td>
                               <td>1 credit</td>
                             </tr>
                             <tr>
                               <th scope="row">Contact Number Lookup Endpoint</th>
-                              <td>10 credits</td>
+                              <td class="table-active">10 credits</td>
                               <td>3 credits (up to 10000 calls / mo)</td>
                               <td>1 credit</td>
                             </tr>
                           </tbody>
                         </table>
-                      </div>
-                    </div>
-
-                    <!-- Buttons -->
-                    <div class="row">
-                      <div class="col-12 col-md-3"></div>
-                      <div class="col-12 col-md-3"></div>
-                      <div class="col-12 col-md-3 mb-4">
-                        <a class="btn btn-block btn-primary" href="#!">
-                          Pick Lite Plan
-                        </a>
-                      </div>
-                      <div class="col-12 col-md-3 mb-4">
-                        <a class="btn btn-block btn-primary" href="#!">
-                          Pick Pro Plan
-                        </a>
                       </div>
                     </div>
 
