--- a/proxycurl-dashboard-pricing-quota.html
+++ b/proxycurl-dashboard-pricing-quota.html
@@ -200,8 +200,8 @@
                             </tr>
                           </thead>
                           
-                          <thead>
-                            <tr class="text-center  text-primary lead">
+                          <thead class="text-center  text-primary lead">
+                            <tr>
                               <th scope="col">API</th>
                               <th scope="col" class="text-black">Free</th>
                               <th scope="col">Lite</th>
@@ -209,7 +209,7 @@
                             </tr>
                           </thead>
 
-                          <tbody>
+                          <tbody class="text-center">
                             <tr>
                               <th scope="row">Person Profile Endpoint</th>
                               <td class="table-active">1 credit</td>
