--- a/dwarf-forms.html
+++ b/dwarf-forms.html
@@ -190,15 +190,22 @@
     <!-- First fold -->
     <section class="mt-n11 pt-12 pb-8 pt-md-14 pb-md-11 border-bottom">
       <div class="container">
-        <div class="row justify-content-center mb-10">
-          <div class="col-12 col-lg-10 text-center">
+        <div class="row justify-content-center text-center mb-10">
+          <div class="col-12 col-lg-10">
 
             <!-- Headin -->
             <h1 class="display-3 fw-bold aos-init aos-animate mb-6" data-aos="fade-up" data-aos-delay="50">
               <span class="text-primary">Dwarf Forms autocompletes your forms</span> with structured data from your customer's LinkedIn profile
             </h1>
 
-            <img alt="Dwarf Forms illustration" class="img-fluid mb-6" src="Illustration_landscape_placement.png">
+            <div class="row justify-content-center text-center">
+              <div class="ratio ratio-16x9">
+
+                <video autoplay loop alt="Dwarf Forms Demo" class="rounded-lg bg-light shadow-lg mb-10" src="assets/dwarf forms/Dwarf-Forms-demo.webm">
+                </video>
+
+              </div>
+            </div>
 
             <div class="row justify-content-center">
               <div class="col-12 col-md-6">
@@ -394,11 +401,12 @@ this is a code with <span class="text-hl-yellow">highlight</span></code></pre>
     <!-- Fourth fold -->
     <section class="py-8 py-md-11 border-bottom bg-light">
       <div class="container">
+
         <div class="row align-items-center mb-12">
           <div class="col-12 col-md-7 order-md-2">
 
             <!-- Image -->
-            <img class="img-fluid screenshot mb-6 mb-md-0" alt="" src="Illustration_landscape_placement.png">
+            <img class="img-fluid screenshot mb-6 mb-md-0" alt="" src="assets/dwarf forms/Showcase_demo registration form.png">
 
           </div>
 
@@ -475,7 +483,7 @@ this is a code with <span class="text-hl-yellow">highlight</span></code></pre>
           <div class="col-12 col-md-7">
 
             <!-- Image -->
-            <img class="img-fluid screenshot mb-6 mb-md-0" alt="" src="assets/dwarf forms/Form_result_showcase.png">
+            <img class="img-fluid screenshot mb-6 mb-md-0" alt="" src="assets/dwarf forms/Showcase_select profile.png">
 
           </div>
 
@@ -494,7 +502,7 @@ this is a code with <span class="text-hl-yellow">highlight</span></code></pre>
           <div class="col-12 col-md-7 order-md-2">
 
             <!-- Image -->
-            <img class="img-fluid screenshot mb-6 mb-md-0" alt="" src="Illustration_landscape_placement.png">
+            <img class="img-fluid screenshot mb-6 mb-md-0" alt="" src="assets/dwarf forms/Showcase_data json.png">
 
           </div>
 
