--- a/dwarf-forms-pricing.html
+++ b/dwarf-forms-pricing.html
@@ -208,7 +208,7 @@
 
             <!-- Text -->
             <p class="lead text-white-80 mb-6 mb-md-8">
-              All types of businesses need access to development resources, so we give you the option to decide how much you need to use.
+              All types of businesses need access to Dwarf Forms, so we give you the option to decide how much you need to use.
             </p>
 
           </div>
