--- a/register.html
+++ b/register.html
@@ -70,12 +70,20 @@
                 <input type="password" class="form-control" id="password" placeholder="re-type password">
               </div>
 
+              <!-- Checkbox -->
+              <div class="form-check mb-2">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                <label class="form-check-label" for="flexCheckDefault">
+                  Accept <a class="text-primary" href="terms-of-use.html" target="_blank">Terms of use</a>
+                </label>
+              </div>               
+
               <!-- Submit -->
               <a class="btn btn-block btn-primary" href="#" type="submit">
                 Continue
               </a>
 
-            </form>
+            </form>           
 
             <!-- Sign Up text -->
             <p class="mb-0 font-size-sm text-muted">
