--- a/index.html
+++ b/index.html
@@ -359,9 +359,13 @@
           <div class="col-12 col-md-10 col-lg-7 text-center" data-aos="fade-up">
             
             <!-- Heading -->
-            <h1 class="display-2 pt-lg-10 mb-8 font-weight-bold">
-              Turn a <span class="text-primary">LinkedIn Profile URL</span> into <span class="text-primary">JSON in real-time</span>
+            <h1 class="display-3 pt-lg-10 font-weight-bold">
+              Proxycurl API turns a <span class="text-primary">LinkedIn Profile URL</span> into <span class="text-primary">JSON</span> in real-time
             </h1>
+
+            <p class="lead text-gray-700 mb-8">
+              Enrich people and company profiles, get contact information, list jobs, list employees, etc, with Proxycurl API
+            </p>
 
             <!-- Linkedin Link -->
             <fieldset disabled>
@@ -1354,7 +1358,7 @@ response = requests.get(api_endpoint,
           <div class="col-12 col-md-4">
 
             <h3 class="font-weight-bold font-size-lg mb-4">
-              Available countries:
+              People profiles:
             </h3>
 
                 <!-- Item -->
@@ -1435,7 +1439,7 @@ response = requests.get(api_endpoint,
           <div class="col-12 col-md-4">
 
             <h3 class="font-weight-bold font-size-lg mb-4">
-              Available companies:
+              Company profiles:
             </h3>
 
             <div class="d-flex">
