--- a/index.html
+++ b/index.html
@@ -82,253 +82,103 @@
           <!-- Navigation -->
           <ul class="navbar-nav ml-auto">
 
+            <!-- Products -->
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarDocumentation" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
-                Linkedin API <i class="fe fe-chevron-down"></i>
+              <a class="nav-link dropdown-toggle" id="navbarAccount" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
+                Products <i class="fe fe-chevron-down"></i>
               </a>
-              <div class="dropdown-menu dropdown-menu-md" aria-labelledby="navbarDocumentation">
-                <div class="list-group list-group-flush">
-
-                  <a class="list-group-item" href="people-linkedin-profile.html">
-
-                    <!-- Icon -->
-                    <div class="icon icon-sm text-primary">
-                      <i class="neu-user-circle" style="font-size: 24px;"></i>
-                    </div>
-
-                    <!-- Content -->
-                    <div class="ml-4">
-
-                      <!-- Heading -->
-                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Person Profile Endpoint
-                      </h6>
-
-                      <!-- Text -->
-                      <p class="font-size-sm text-gray-700 mb-0">
-                        Scrape Linkedin Profiles
-                      </p>
-
-                    </div>
-
+              <ul class="dropdown-menu" aria-labelledby="navbarAccount">
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link dropdown-toggle" data-toggle="dropdown" href="#">
+                    Dwarf Forms
                   </a>
-
-                  <a class="list-group-item" href="company-linkedin-profile.html">
-
-                    <!-- Icon -->
-                    <div class="icon icon-sm text-primary">
-                      <i class="neu-company" style="font-size: 24px;"></i>
-                    </div>
-
-                    <!-- Content -->
-                    <div class="ml-4">
-
-                      <!-- Heading -->
-                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Company Profile Endpoint
-                      </h6>
-
-                      <!-- Text -->
-                      <p class="font-size-sm text-gray-700 mb-0">
-                        Scrape Linkedin Companies
-                      </p>
-
-                    </div>
-
+                  <div class="dropdown-menu">
+                    <a class="dropdown-item" href="./account-general.html">
+                      Dwarf Forms
+                    </a>
+                    <a class="dropdown-item" href="./account-security.html">
+                      API Documentation
+                    </a>
+                  </div>
+                </li>
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link dropdown-toggle" data-toggle="dropdown" href="#">
+                  Proxycurl API
                   </a>
-
-                  <a class="list-group-item" href="jobs-linkedin-profile.html">
-
-                    <!-- Icon -->
-                    <div class="icon icon-sm text-primary">
-                      <i class="neu-bag" style="font-size: 24px;"></i>
-                    </div>
-
-                    <!-- Content -->
-                    <div class="ml-4">
-
-                      <!-- Heading -->
-                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Job Profile Endpoint
-                      </h6>
-
-                      <!-- Text -->
-                      <p class="font-size-sm text-gray-700 mb-0">
-                        Scrape Linkedin Jobs
-                      </p>
-
-                    </div>
-
+                  <div class="dropdown-menu">
+                    <a class="dropdown-item" href="./signin-cover.html">
+                      LinkedIn Person Profile API
+                    </a>
+                    <a class="dropdown-item" href="./signin-illustration.html">
+                      LinkedIn Company Profile API
+                    </a>
+                    <a class="dropdown-item" href="./signin.html">
+                      Work Email Lookup API
+                    </a>
+                    <a class="dropdown-item" data-toggle="modal" href="#modalSigninHorizontal">
+                      Employee Listing API
+                    </a>
+                    <a class="dropdown-item" data-toggle="modal" href="#modalSigninVertical">
+                      Reverse Email Lookup API
+                    </a>
+                    <a class="dropdown-item" data-toggle="modal" href="#modalSigninVertical">
+                      API Documentation
+                    </a>
+                  </div>
+                </li>
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link dropdown-toggle" data-toggle="dropdown" href="#">
+                    LinkDB
                   </a>
-
-                  <a class="list-group-item" href="linkdb.html">
-
-                    <!-- Icon -->
-                    <div class="icon icon-sm text-primary">
-                      <i class="neu-db" style="font-size: 24px;"></i>
-                    </div>
-
-                    <!-- Content -->
-                    <div class="ml-4">
-
-                      <!-- Heading -->
-                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        LinkDB
-                      </h6>
-
-                      <!-- Text -->
-                      <p class="font-size-sm text-gray-700 mb-0">
-                        Database of Linkedin Profiles
-                      </p>
-
-                    </div>
-
+                  <div class="dropdown-menu">
+                    <a class="dropdown-item" href="./signup-cover.html">
+                      Database of public LinkedIn profiles
+                    </a>
+                  </div>
+                </li>
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link dropdown-toggle" data-toggle="dropdown" href="#">
+                    Freebies
                   </a>
-
-                  <a class="list-group-item" href="linkdb-snapshots.html">
-
-                    <!-- Icon -->
-                    <div class="icon icon-sm text-primary">
-                      <i class="neu-data-quality" style="font-size: 24px;"></i>
-                    </div>
-
-                    <!-- Content -->
-                    <div class="ml-4">
-
-                      <!-- Heading -->
-                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        LinkDB Snapshots
-                      </h6>
-
-                      <!-- Text -->
-                      <p class="font-size-sm text-gray-700 mb-0">
-                        Snapshot of our database
-                      </p>
-
-                    </div>
-
-                  </a> 
-                  
-                  <a class="list-group-item" href="email-lookup-api-endpoint.html">
-
-                    <!-- Icon -->
-                    <div class="icon icon-sm text-primary">
-                      <i class="neu-email" style="font-size: 24px;"></i>
-                    </div>
-
-                    <!-- Content -->
-                    <div class="ml-4">
-
-                      <!-- Heading -->
-                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Email Lookup API Endpoint
-                      </h6>
-
-                      <!-- Text -->
-                      <p class="font-size-sm text-gray-700 mb-0">
-                        Work email from Linkedin profiles
-                      </p>
-
-                    </div>
-
-                  </a>
-
-                  <a class="list-group-item" href="list-employee-endpoint.html">
-
-                    <!-- Icon -->
-                    <div class="icon icon-sm text-primary">
-                      <i class="neu-groups" style="font-size: 24px;"></i>
-                    </div>
-
-                    <!-- Content -->
-                    <div class="ml-4">
-
-                      <!-- Heading -->
-                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        List Employee Endpoint
-                      </h6>
-
-                      <!-- Text -->
-                      <p class="font-size-sm text-gray-700 mb-0">
-                        Scrape Linkedin List Employee
-                      </p>
-
-                    </div>
-
-                  </a>
-
-                  <a class="list-group-item" href="reverse-email-lookup.html">
-
-                    <!-- Icon -->
-                    <div class="icon icon-sm text-primary">
-                      <i class="neu-expand-user" style="font-size: 24px;"></i>
-                    </div>
-
-                    <!-- Content -->
-                    <div class="ml-4">
-
-                      <!-- Heading -->
-                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Reverse Email Lookup
-                      </h6>
-
-                      <!-- Text -->
-                      <p class="font-size-sm text-gray-700 mb-0">
-                        Takes a work email address and returns you a Linkedin Profile URL
-                      </p>
-
-                    </div>
-
-                  </a>
-
-                </div>
-              </div>
+                  <div class="dropdown-menu">
+                    <a class="dropdown-item" href="./password-reset-cover.html">
+                      Disposable Email Checker
+                    </a>
+                  </div>
+                </li>
+              </ul>
             </li>
 
+            <!-- Pricing -->
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarDocumentation" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
-                Free Tools <i class="fe fe-chevron-down"></i>
+              <a class="nav-link dropdown-toggle" id="navbarAccount" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
+                Pricing <i class="fe fe-chevron-down"></i>
               </a>
-              <div class="dropdown-menu dropdown-menu-md" aria-labelledby="navbarDocumentation">
-                <div class="list-group list-group-flush">
-                  
-                  <a class="list-group-item" href="identify.html" target="_blank">
-
-                    <!-- Icon -->
-                    <div class="icon icon-sm text-primary">
-                      <i class="neu-search" style="font-size: 24px;"></i>
-                    </div>
-
-                    <!-- Content -->
-                    <div class="ml-4">
-
-                      <!-- Heading -->
-                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Decision maker finder
-                      </h6>
-
-                      <!-- Text -->
-                      <p class="font-size-sm text-gray-700 mb-0">
-                        Identify decision makers of prospect
-                      </p>
-
-                    </div>
-
+              <ul class="dropdown-menu" aria-labelledby="navbarAccount">
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link" href="#">
+                    Dwarf Forms Pricing Plan
                   </a>
-
-                </div>
-              </div>
-            </li>            
-
-            <li class="nav-item">
-              <a class="nav-link" id="navbarPages" href="pricing.html">
-                Pricing
-              </a>
+                </li>
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link" href="#">
+                    Proxycurl API Pricing Plans
+                  </a>
+                </li>
+              </ul>
             </li>
 
+            <!-- FAQ -->
             <li class="nav-item">
               <a class="nav-link" id="navbarAccount" href="#!">
-                Documentation
+                FAQ
+              </a>
+            </li>
+
+            <!-- Blog -->
+            <li class="nav-item">
+              <a class="nav-link" id="navbarAccount" href="#!">
+                Blog
               </a>
             </li>
 
