--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
                     Dwarf Forms
                   </a>
                   <div class="dropdown-menu">
-                    <a class="dropdown-item" href="./account-general.html">
+                    <a class="dropdown-item" href="dwarf-forms.html">
                       Dwarf Forms
                     </a>
-                    <a class="dropdown-item" href="./account-security.html">
+                    <a class="dropdown-item" href="#">
                       API Documentation
                     </a>
                   </div>
@@ -106,22 +106,22 @@
                   Proxycurl API
                   </a>
                   <div class="dropdown-menu">
-                    <a class="dropdown-item" href="./signin-cover.html">
+                    <a class="dropdown-item" href="#">
                       LinkedIn Person Profile API
                     </a>
-                    <a class="dropdown-item" href="./signin-illustration.html">
+                    <a class="dropdown-item" href="#">
                       LinkedIn Company Profile API
                     </a>
-                    <a class="dropdown-item" href="./signin.html">
+                    <a class="dropdown-item" href="#">
                       Work Email Lookup API
                     </a>
-                    <a class="dropdown-item" data-toggle="modal" href="#modalSigninHorizontal">
+                    <a class="dropdown-item" href="#">
                       Employee Listing API
                     </a>
-                    <a class="dropdown-item" data-toggle="modal" href="#modalSigninVertical">
+                    <a class="dropdown-item" href="#">
                       Reverse Email Lookup API
                     </a>
-                    <a class="dropdown-item" data-toggle="modal" href="#modalSigninVertical">
+                    <a class="dropdown-item" data-toggle="modal" href="#">
                       API Documentation
                     </a>
                   </div>
@@ -131,7 +131,7 @@
                     LinkDB
                   </a>
                   <div class="dropdown-menu">
-                    <a class="dropdown-item" href="./signup-cover.html">
+                    <a class="dropdown-item" href="linkdb.html">
                       Database of public LinkedIn profiles
                     </a>
                   </div>
@@ -141,7 +141,7 @@
                     Freebies
                   </a>
                   <div class="dropdown-menu">
-                    <a class="dropdown-item" href="./password-reset-cover.html">
+                    <a class="dropdown-item" href="disposable-email.html">
                       Disposable Email Checker
                     </a>
                   </div>
@@ -156,12 +156,12 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarAccount">
                 <li class="dropdown-item dropright">
-                  <a class="dropdown-link" href="#">
+                  <a class="dropdown-link" href="dwarf-forms-pricing.html">
                     Dwarf Forms Pricing Plan
                   </a>
                 </li>
                 <li class="dropdown-item dropright">
-                  <a class="dropdown-link" href="#">
+                  <a class="dropdown-link" href="pricing.html">
                     Proxycurl API Pricing Plans
                   </a>
                 </li>
@@ -203,13 +203,13 @@
 
     <!-- WELCOME
     ================================================== -->
-    <section class="pt-8 pb-11 pt-md-9 pb-md-12 py-lg-6 bg-light bg-between" style="background-image: url(./assets/img/illustrations/left.png), url(./assets/img/illustrations/right.png);">
+    <section class="pt-8 pb-11 pt-md-9 pb-md-12 py-lg-10 bg-light bg-between" style="background-image: url(./assets/img/illustrations/left.png), url(./assets/img/illustrations/right.png);">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-7 text-center" data-aos="fade-up">
             
             <!-- Heading -->
-            <h1 class="display-3 pt-lg-10 font-weight-bold">
+            <h1 class="display-3 font-weight-bold">
               Proxycurl API turns a <span class="text-primary">LinkedIn Profile URL</span> into <span class="text-primary">JSON</span> in real-time
             </h1>
 
