--- a/bagikuota-faq.html
+++ b/bagikuota-faq.html
@@ -67,12 +67,18 @@
               </a>
             </li>
 
+            <li class="nav-item">
+              <a class="nav-link" id="navbarAccount" target="blank" href="https://www.instagram.com/bagikuota.id">
+                Instagram <i class="neu-arrow"></i>
+              </a>
+            </li>
+
           </ul>
 
         </div>
 
       </div>
-    </nav> 
+    </nav>
 
     <!-- CONTENT
     ================================================== -->
@@ -292,13 +298,18 @@
                   Rewards
                 </a>
               </li>
+              <li class="mb-3">
+                <a href="https://www.instagram.com/bagikuota.id" target="blank" class="text-reset">
+                  Instagram
+                </a>
+              </li>
             </ul>
 
           </div>
 
         </div> <!-- / .row -->
       </div> <!-- / .container -->
-    </footer>    
+    </footer>
 
     <!-- JAVASCRIPT
     ================================================== -->
